--- a/TP2/.github/workflows/cicd_ml.yml
+++ b/TP2/.github/workflows/cicd_ml.yml
@@ -3,7 +3,7 @@ name: build docker image
 on:
   push:
     paths:
-      - ml/*
+      - TP2/ml/*
 
 jobs: 
   build-deploy-ml:
@@ -29,7 +29,7 @@ jobs:
 on:
   push:
     paths:
-      - server/*
+      - TP2/server/*
 
 jobs: 
   build-deploy-server:
