--- a/TP2/.github/workflows/cicd_server.yml
+++ b/TP2/.github/workflows/cicd_server.yml
@@ -1,14 +1,14 @@
-name: build docker image ml
+name: build docker image server
 
 on:
   push:
     paths:
-      - TP2/ml/*
+      - TP2/server/*
 
 jobs: 
-  build-deploy-ml:
+  build-deploy-server:
     runs-on: python:3.8-slim-buster
-  
+
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
@@ -18,10 +18,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      
-      - name: build and push ml image
+    
+      - name: build and push server image
         uses: docker/build-push-action@v4
         with:
-          context: ml/
+          context: server/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/ml 
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/server 
