--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -24,4 +24,4 @@ jobs:
         with:
           context: TP2/server/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/server/$(date +%s) 
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/server/
