--- a/TP2/deployment.yaml
+++ b/TP2/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       initContainers:
       - name: ml
         image: philipedc/ml:latest
-        restartPolicy: OnFailure
+        restartPolicy: Never
         volumeMounts:
         - name: project2-pv-philipecunha
           mountPath: /app/rules
