--- a/.github/workflows/ml.yml
+++ b/.github/workflows/ml.yml
@@ -5,10 +5,13 @@ on:
     paths:
       - TP2/ml/*
 
-jobs: 
+jobs:
   build-deploy-ml:
     runs-on: ubuntu-latest
-  
+
+    env:
+      IMAGE_VERSION: ${{ github.run_number }}
+
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
@@ -18,10 +21,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      
+
       - name: build and push ml image
         uses: docker/build-push-action@v4
         with:
           context: TP2/ml/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/ml
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/ml:${{ env.IMAGE_VERSION }}
