--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -9,8 +9,8 @@ jobs:
   build-deploy-server:
     runs-on: ubuntu-latest
 
-    env:
-      IMAGE_VERSION: ${{ github.run_number }}
+    # env:
+    #   IMAGE_VERSION: ${{ github.run_number }}
 
     steps:
       - name: checkout repo
@@ -27,4 +27,5 @@ jobs:
         with:
           context: TP2/server/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/server:${{ env.IMAGE_VERSION }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/server:latest
+          #  tags: ${{ secrets.DOCKERHUB_USERNAME }}/server:${{ env.IMAGE_VERSION }}
