--- a/.github/workflows/ml.yml
+++ b/.github/workflows/ml.yml
@@ -29,3 +29,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/ml:latest # change later
           # tags: ${{ secrets.DOCKERHUB_USERNAME }}/ml:${{ env.IMAGE_VERSION }}
+
+      - name: force update pods
+        run: |
+          kubectl delete deploy api
