--- a/TP2/deployment.yaml
+++ b/TP2/deployment.yaml
@@ -6,14 +6,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api
+      app: api-pod
   template:
     metadata:
       labels:
-        app: api
+        app: api-pod
     spec:
       containers:
-      - name: api
+      - name: server
         image: philipedc/server:latest
         ports:
           - containerPort: 32211
