Added dataset gathering through URL

--- a/TP2/deployment.yaml
+++ b/TP2/deployment.yaml
@@ -28,6 +28,9 @@ spec:
         volumeMounts:
         - name: rules
           mountPath: /app/rules
+        env:
+        - name: DATASET_URL
+          value: "https://homepages.dcc.ufmg.br/~cunha/hosted/cloudcomp-2023s2-datasets/2023_spotify_ds1.csv"
       volumes:
       - name: rules
         persistentVolumeClaim:
